# Real-Time-Task-Monitor

./: .gitattributes  .gitignore  README.md  pyproject.toml
.claude/: settings.local.json
app/: Oauth2.py  SocketManager.py  main.py  redis_dependency.py
app/db/: db.py
app/frontend/: index.html
app/routes/: auth.py  task.py  user.py  ws.py
app/schema/: schema.py
app/utils/: hash.py
